tests/toy/neg/000910_mutation.toylang
program a = { if bool then sleep; } .
